<resources>
    <string name="app_name">SmartHouse</string>
    <string name="add">Add ...</string>
    <string name="capteur_name">Capteur name</string>
    <string name="capteur_type">Capteur type</string>
    <string name="capteur_started">"Started ? "</string>
    <string name="save">Save</string>
    <string name="sign_in">Sign In</string>

    <!-- fragment liste capteurs -->
    <string name="activate_capteur_button">Activer/Désactiver capteur</string>

    <!-- fragment push qos -->
    <string name="fpq_browse">Browse</string>
    <string name="fpq_push_qos">Push it !</string>
    <string name="fps_hint">QoS file</string>

    <!-- Pour le menu gauche -->
    <string name="menu_item_listCapteur">Liste de catpeur</string>
    <string name="menu_item_pushQoS">Push une QoS</string>
    <string name="menu_item_waitQueue">File d\'attente</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <string name="menu_username">User name</string>
    <string name="menu_useremail">User email</string>

</resources>
